--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
                     <li><a href="#" data-lang="en">Deals</a></li>
                     <li><a href="#" data-lang="ms" style="display:none">Tawaran</a></li>
                     <li><a href="#" data-lang="zh" style="display:none">优惠</a></li>
+
+                    <li><a href="admin-shopee.html" data-lang="en">admin-shopee</a></li>
+                    <li><a href="admin-shopee.html" data-lang="ms" style="display:none">admin-shopee</a></li>
+                    <li><a href="admin-shopee.html" data-lang="zh" style="display:none">admin-shopee</a></li>
+
+                    
                     
                     <li><a href="register.html" data-lang="en">Register</a></li>
                     <li><a href="register.html" data-lang="ms" style="display:none">Daftar</a></li>
@@ -228,4 +234,5 @@
     <script src="js/main.js"></script>
     <script src="js/cart.js"></script>
 </body>
+
 </html>
