--- a/admin.html
+++ b/admin.html
@@ -18,15 +18,15 @@
         
         <nav class="admin-nav">
             <ul>
-                <li><a href="admin.html#dashboard"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
-                <li><a href="admin.html#products"><i class="fas fa-box"></i> Products</a></li>
-                <li><a href="admin.html#orders"><i class="fas fa-shopping-cart"></i> Orders</a></li>
-                <li><a href="admin.html#users"><i class="fas fa-users"></i> Users</a></li>
+                <li><a href="#dashboard"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
+                <li><a href="#products"><i class="fas fa-box"></i> Products</a></li>
+                <li><a href="#orders"><i class="fas fa-shopping-cart"></i> Orders</a></li>
+                <li><a href="#users"><i class="fas fa-users"></i> Users</a></li>
                 <li><a href="admin-shopee.html class="active""><i class="fas fa-store"></i> Shopee Integration</a></li>
-                <li><a href="admin.html#freight"><i class="fas fa-shipping-fast"></i> Freight Settings</a></li>
-                <li><a href="admin.html#payments"><i class="fas fa-credit-card"></i> Payments</a></li>
-                <li><a href="admin.html#logs"><i class="fas fa-clipboard-list"></i> System Logs</a></li>
-                <li><a href="admin.html#settings"><i class="fas fa-cog"></i> Settings</a></li>
+                <li><a href="#freight"><i class="fas fa-shipping-fast"></i> Freight Settings</a></li>
+                <li><a href="#payments"><i class="fas fa-credit-card"></i> Payments</a></li>
+                <li><a href="#logs"><i class="fas fa-clipboard-list"></i> System Logs</a></li>
+                <li><a href="#settings"><i class="fas fa-cog"></i> Settings</a></li>
             </ul>
         </nav>
     </div>
@@ -242,6 +242,7 @@
     <script src="js/admin.js"></script>
 </body>
 </html>
+
 
 
 
