--- a/admin.html
+++ b/admin.html
@@ -22,7 +22,7 @@
                 <li><a href="#products"><i class="fas fa-box"></i> Products</a></li>
                 <li><a href="#orders"><i class="fas fa-shopping-cart"></i> Orders</a></li>
                 <li><a href="#users"><i class="fas fa-users"></i> Users</a></li>
-                <li><a href="/admin-shopee.html class="active""><i class="fas fa-store"></i> Shopee Integration</a></li>
+                <li><a href="/admin-shopee.html"><i class="fas fa-store"></i> Shopee Integration</a></li>
                 <li><a href="#freight"><i class="fas fa-shipping-fast"></i> Freight Settings</a></li>
                 <li><a href="#payments"><i class="fas fa-credit-card"></i> Payments</a></li>
                 <li><a href="#logs"><i class="fas fa-clipboard-list"></i> System Logs</a></li>
@@ -242,6 +242,7 @@
     <script src="js/admin.js"></script>
 </body>
 </html>
+
 
 
 
